Development Portal (2020-04-08 shi)
==============================
Add print-friendly css for new SAVi


Development Portal (2020-04-04 shi)
==============================
Update crs-add section for new SAVi
Display table when loan-status elements are available
CSS changes


Development Portal (2020-04-03 shi)
==============================
Update policy marker and tag conditions
Display as url to tag vocab when available
CSS changes
Update layout display for result indicators
Update new SAVi element column widths
Move tag and policy-marker further up
Remove link for owner-org id


Development Portal (2020-04-02 shi)
==============================
Display policy marker narrative if vocab 99
Display policy marker code if vocab 99
Display policy marker vocabulary-uri if vocab 99
Display activity date percentile as loading bar
Change layout for activity dates
CSS changes
Display glossary for new sector graph
Add check for when length is not found
Add check for when result facets are not provided


Development Portal (2020-04-01 shi)
==============================
Fix display recipient-country code for org file
Fix display reporting org 99 url
Display code for recipient-country for org file
Display code for recipient region when vocab is 1


Development Portal (2020-03-30 shi)
==============================
Display policy marker significance description
Display tag vocab description and url
Display tag narrative if vocab is 99
Display other identifier code number
Minor css changes


Development Portal (2020-03-28 shi)
==============================
Update search text
Update search2 glossary and rearrange filters
css changes


Development Portal (2020-03-26 shi)
==============================
New graph replacements for landing page
Display organisation types for publisher graph
Display country codes for recipient graph
Display sector codes for sector graph
Adjust colours for accessibility
Display information text for new graphs
Minor css changes