@@ -1,6 +1,9 @@
 Development Portal (2020-04-08 shi)
 ==============================
 Add print-friendly css for new SAVi
+Fix typo for @activity-id in participating-org
+Fix urls for @ref
+Display name element for org files
 
 
 Development Portal (2020-04-04 shi)
